# Kata

.github/workflows/: c-cpp.yml
BowlingKata/: BowlingKataTestCase.cpp  CMakeLists.txt  bowling.h
LeetCodeKata-1342/: LCKataTestCase.cpp  Solution.h
LeetCodeKata-2000/: CMakeLists.txt  LCKataTestCase.cpp  Solution.h
MoveSemanticKata/: CMakeLists.txt  MoveSemanticKataTestCase.cpp  move.h
RomanKata/: CMakeLists.txt  RomanKataTestCase.cpp  convert.h
SortKata/: CMakeLists.txt  SortKataTestCase.cpp  sort1.h
SoundexKata/: CMakeLists.txt  Soundex.h  SoundexKataTestCase.cpp
SpecialMemTemplKata/: CMakeLists.txt  SpecialMemTemplKataTestCase.cpp  person.h
StackTempaleKata/: CMakeLists.txt  StackTemplateKataTestCase.cpp  stack.h
